# Caudal

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  compose.yaml  pnpm-lock.yaml
apps/api/: .dockerignore  Dockerfile  alembic.ini  go.mod  go.sum  pyproject.toml
apps/api/app/: main.py
apps/api/app/backup/: router.py  schemas.py
apps/api/app/categories/: wiring.py
apps/api/app/expenses/: wiring.py
apps/api/app/incomes/: wiring.py
apps/api/app/recurrences/: wiring.py
apps/api/app/reports/: wiring.py
apps/api/app/shared/: config.py  database.py
apps/api/cmd/api/: main.go
apps/api/db/migrations/: 00001_create_expense_table.sql  00002_create_category_and_fk.sql  00003_seed_debt_category.sql  00004_add_kind_and_income_sources.sql  00005_create_income_table.sql  00006_create_recurrence_table.sql  00007_seed_savings_category.sql  00008_link_movements_to_recurrences.sql  00009_seed_category_icons.sql  00010_create_profile_table.sql  00011_add_profile_country_code.sql
apps/api/internal/app/: router.go
apps/api/migrations/: env.py
apps/api/migrations/versions/: 0001_create_expense_table.py  0002_create_category_and_fk.py  0003_seed_debt_category.py  0004_add_category_kind_and_seed_income_sources.py  0005_create_income_table.py  0006_create_recurrence_table.py  0007_seed_savings_category.py
apps/api/openapi/: caudal.yaml
apps/api/tests/: fakes.py
apps/api/tests/categories/: test_list_categories.py  test_list_categories_by_kind.py
apps/api/tests/expenses/: test_backup.py  test_create_expense.py  (+3 more)
(+274 files in other folders)
